--- a/back-end/ormconfig.json
+++ b/back-end/ormconfig.json
@@ -1,6 +1,9 @@
 {
-    "type": "sqlite",
-    "database": "./src/database/database.sqlite",
+    "type": "mysql",
+    "database": "register",
+    "username":"root",
+    "password": "pass123",
+    "host" : "127.0.0.1",
     "migrations": [
         "./src/database/migrations/*.ts"
     ],
