--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,10 +13,12 @@
     "@types/react-dom": "^16.9.8",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "dateformat": "^4.5.0",
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -48,7 +50,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/react-router-dom": "^5.1.7",
     "ts-node-dev": "^1.1.1"
   },
-  "proxy" : "http://localhost:3333"
+  "proxy": "http://localhost:3333"
 }
