--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,11 +15,14 @@
     "bootstrap": "^4.6.0",
     "dateformat": "^4.5.0",
     "express": "^4.17.1",
+    "inputmask": "^5.0.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-text-mask": "^5.4.3",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -50,7 +53,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/inputmask": "^5.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-text-mask": "^5.4.6",
     "ts-node-dev": "^1.1.1"
   },
   "proxy": "http://localhost:3333"
