--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.12.1",
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,6 +12,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "alert": "^5.0.10",
+    "alertifyjs": "^1.13.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "dateformat": "^4.5.0",
@@ -20,9 +23,12 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-loading-skeleton": "^2.1.1",
+    "react-native-flash-message": "^0.1.22",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-text-mask": "^5.4.3",
+    "react-toastify": "^7.0.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
