--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.12.1",
+    "@date-io/date-fns": "^2.10.7",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +19,7 @@
     "alertifyjs": "^1.13.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.16.1",
     "dateformat": "^4.5.0",
     "express": "^4.17.1",
     "inputmask": "^5.0.5",
