--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,17 +13,21 @@
   "dependencies": {
     "@types/multer": "^1.4.4",
     "@types/yup": "^0.29.9",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "typeorm": "^0.2.29",
     "yup": "^0.29.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.3"
