--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-loading-skeleton": "^2.1.1",
+    "react-lottie": "^1.2.3",
     "react-native-flash-message": "^0.1.22",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -64,6 +65,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/inputmask": "^5.0.0",
+    "@types/react-lottie": "^1.2.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-text-mask": "^5.4.6",
     "ts-node-dev": "^1.1.1"
