--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-full-screen": "^0.3.2-0",
     "react-icons": "^4.1.0",
     "react-loading-skeleton": "^2.1.1",
     "react-lottie": "^1.2.3",
