--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rafael Marmitt",
   "license": "ISC",
@@ -14,20 +13,26 @@
     "@types/multer": "^1.4.4",
     "@types/yup": "^0.29.9",
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "typeorm": "^0.2.29",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.5.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bluebird": "^3.5.33",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.14.25",
+    "sequelize-cli": "^6.2.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.3"
